# HelloCUDA

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
Code/: CMakeLists.txt
Code/HelloCuda/: CMakeLists.txt  HelloCuda.cpp
cmake/: Targets.cmake
src/: CMakeLists.txt
src/DeviceInfo/: CMakeLists.txt  DeviceInfo.cu
src/GEMM/: CMakeLists.txt  GemmNaive.cu  GemmNaive.cuh
src/HelloCuda/: CMakeLists.txt  HelloCuda.cu
src/Pointwise/: CMakeLists.txt  PointwiseAddNaive.cu  PointwiseAddTiled.cu  README.md
src/Utils/: CMakeLists.txt  Utils.cu  Utils.cuh
test/Utils/: CMakeLists.txt  TestUtils.cpp
